--- a/ui/interface_main_window.ui
+++ b/ui/interface_main_window.ui
@@ -67,7 +67,13 @@
           <layout class="QVBoxLayout" name="verticalLayout_2">
            <item>
             <widget class="QWidget" name="menu_widget" native="true">
-             <layout class="QVBoxLayout" name="verticalLayout_3"/>
+             <property name="sizePolicy">
+              <sizepolicy hsizetype="Expanding" vsizetype="Expanding">
+               <horstretch>0</horstretch>
+               <verstretch>0</verstretch>
+              </sizepolicy>
+             </property>
+             <layout class="QGridLayout" name="gridLayout_2"/>
             </widget>
            </item>
           </layout>
